src/objects/Carousel_Item__c.object
<CustomObject><fields>
        <fullName>Button_Path__c</fullName>
        <description>The Location that the Carousel button will link</description>
        <inlineHelpText>The Location that the Carousel button will link</inlineHelpText>
        <label>Button Path</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Button_Text__c</fullName>
        <description>The Text that will appear on the Carousel Button</description>
        <inlineHelpText>The Text that will appear on the Carousel Button</inlineHelpText>
        <label>Button Text</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipName>Carousel_Items</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Header__c</fullName>
        <description>The Header on the Carousel page</description>
        <inlineHelpText>The Header on the Carousel page</inlineHelpText>
        <label>Header</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Image__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Images that will be displayed on the Carousel</description>
        <inlineHelpText>The Images that will be displayed on the Carousel</inlineHelpText>
        <label>Image</label>
        <referenceTo>Image__c</referenceTo>
        <relationshipName>Carousel_Items</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Sort_Order__c</fullName>
        <description>The Order in which the Carousel items will be displayed</description>
        <inlineHelpText>The Order in which the Carousel items will be displayed</inlineHelpText>
        <label>Sort Order</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Sliding Image</label><nameField>
        <label>Sliding Image</label>
        <type>Text</type>
    </nameField><pluralLabel>Sliding Images</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>